--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bluesky User Resolver</title>
+    <title>Bluesky User ID Resolver</title>
+    <meta name="description" content="Resolve Bluesky user handles to their unique IDs quickly and easily with our Bluesky User ID Resolver tool.">
+    <meta name="keywords" content="Bluesky, User ID Resolver, Bluesky Handles, Resolve Handles, Bluesky API">
+    <meta name="author" content="pvrz">
     <link rel="stylesheet" href="styles.css">
+    <meta property="og:title" content="Bluesky User ID Resolver | Resolve Bluesky Handles">
+    <meta property="og:description" content="Resolve Bluesky user handles to their unique IDs quickly and easily with our Bluesky User ID Resolver tool.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://bsid.pvrz.lol/preview.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Bluesky User ID Resolver | Resolve Bluesky Handles">
+    <meta name="twitter:description" content="Resolve Bluesky user handles to their unique IDs quickly and easily with our Bluesky User ID Resolver tool.">
+    <meta name="twitter:image" content="https://bsid.pvrz.lol/preview.png">
 </head>
 <body>
     <div class="container">
